// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextAreaField rendering adds the error class if the error is set 1`] = `
<Layer
  className="TextAreaField"
>
  <LabelLine
    error={true}
    htmlFor="random-id"
    text="Label"
  />
  <textarea
    aria-describedby="random-id-error"
    aria-invalid={true}
    className="TextAreaField__area TextAreaField--noresize TextAreaField--error"
    id="random-id"
    maxLength={10}
    onChange={[Function]}
    placeholder="placeholder"
    value="value"
  />
  <FieldError
    id="random-id-error"
    text="Error"
  />
</Layer>
`;

exports[`TextAreaField rendering does not add the resize class if the resize is true 1`] = `
<Layer
  className="TextAreaField"
>
  <LabelLine
    error={false}
    htmlFor="random-id"
    text="Label"
  />
  <textarea
    aria-describedby="random-id-helper"
    aria-invalid={false}
    className="TextAreaField__area"
    id="random-id"
    maxLength={10}
    onChange={[Function]}
    placeholder="placeholder"
    value="value"
  />
  <FieldHelper
    id="random-id-helper"
  />
</Layer>
`;

exports[`TextAreaField rendering renders expected elements 1`] = `
<Layer
  className="TextAreaField"
>
  <LabelLine
    error={false}
    htmlFor="random-id"
    required={true}
    text="Label"
  />
  <textarea
    aria-describedby="random-id-helper"
    aria-invalid={false}
    aria-required={true}
    className="TextAreaField__area TextAreaField--noresize"
    id="random-id"
    maxLength={10}
    onChange={[Function]}
    placeholder="placeholder"
    value="value"
  />
  <FieldHelper
    id="random-id-helper"
    text="Helper text"
  />
</Layer>
`;

exports[`TextAreaField rendering renders expected elements when className is set 1`] = `
<Layer
  className="TextAreaField TestClass"
>
  <LabelLine
    error={false}
    htmlFor="random-id"
    text="Label"
  />
  <textarea
    aria-describedby="random-id-helper"
    aria-invalid={false}
    className="TextAreaField__area TextAreaField--noresize"
    id="random-id"
    maxLength={10}
    onChange={[Function]}
    placeholder="placeholder"
    value="value"
  />
  <FieldHelper
    id="random-id-helper"
  />
</Layer>
`;

exports[`TextAreaField rendering renders expected elements when value is empty 1`] = `
<Layer
  className="TextAreaField"
>
  <LabelLine
    error={false}
    htmlFor="random-id"
    text="Label"
  />
  <textarea
    aria-describedby="random-id-helper"
    aria-invalid={false}
    className="TextAreaField__area TextAreaField--noresize"
    id="random-id"
    maxLength={10}
    onChange={[Function]}
    placeholder="placeholder"
    value=""
  />
  <FieldHelper
    id="random-id-helper"
  />
</Layer>
`;
